gcc/testsuite/g++.dg/inherit/error4.C
@@ -1,0 +1,8 @@
+struct A { virtual ~A(); };
+
+struct B : A A {};            // { dg-error "'A'|function|extra" }
+
+A foo(const B &b)
+{
+  return b;                   // { dg-error "conversion" }
+}
